[gd_scene load_steps=3 format=3]

[ext_resource type="Theme" path="res://Resources/Themes/ActionMenuButton/NormalMenuTheme.tres" id="1_4dgum"]
[ext_resource type="Script" path="res://Scripts/UI/ActionMenuButton.gd" id="3_2x5p2"]

[node name="ActionMenuButton" type="Button"]
custom_minimum_size = Vector2(50, 50)
offset_left = -30.0
offset_top = -30.0
offset_right = 30.0
offset_bottom = 30.0
theme = ExtResource("1_4dgum")
icon_alignment = 1
expand_icon = true
script = ExtResource("3_2x5p2")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 30.0
offset_top = -36.0
offset_right = 31.0
offset_bottom = -10.0
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="resized" from="Label" to="." method="_on_label_resized"]
